# biotdms-explorer

./: .gitignore  CLI_INTEGRATION_GUIDE.md  Install_from_notebook_test.ipynb  README.md  app.py  cli.py  pyproject.toml
config/: signatures.yaml  subtask_constructs.yaml
core/: __init__.py  data_ingest.py  data_loader.py  measure_neighborhood.py  ontology.py  ontology_docs.py  process_sessions.py  session_loader.py  speaking_loader.py  subtask_construct_map.py
data/ontologies/: evidence.ttl  instances.ttl  teamMeasurement.ttl
docs/ontology_overview/: class_glossary.md  property_glossary.md  summary_stats.md
docs/widoco/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
docs/widoco/sections/: crossref-en.html  overview-en.html
docs/widoco/webvowl/data/: ontology.json
etl/: etl_excel_to_ttl.py
views/: data_management.py  landing.py  session_analysis.py  uc1_measurement_strategy.py  uc2_analysis.py  uc2_signature_selection.py
