[project]
name = "biotdms-explorer"
version = "0.3.0"
description = "BioTDMS Explorer — A system for exploring team performance measurement signatures and their evidence base"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

dependencies = [
    # Core framework
    "streamlit>=1.35.0",
    # Data handling
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    # Ontology / Knowledge Graph
    "rdflib>=7.0.0",
    # Visualization
    "plotly>=5.18.0",
    "pyvis>=0.3.2",
    "networkx>=3.2",
    # Search & ML
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "graphviz>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[tool.uv]
# No build needed — this is a Streamlit app, not an installable package
package = false
